--- a/build.yaml
+++ b/build.yaml
@@ -19,7 +19,20 @@
 #
 ---
 include:
+  # -----------------------------------------
+  # Your other keyboard parts here
+  # -----------------------------------------
+  # Change the board appropriately, you can use any board
+  - board: seeeduino_xiao_ble
+    shield: lily58_dongle
+  - board: seeeduino_xiao_ble
+    shield: settings_reset
+  - board: nice_nano_v2
+    shield: settings_reset
+  # Add these cmake-args to the peripherals you wish to use with the dongle
   - board: nice_nano_v2
     shield: lily58_left
+    cmake-args: -DCONFIG_ZMK_SPLIT=y -DCONFIG_ZMK_SPLIT_ROLE_CENTRAL=n
   - board: nice_nano_v2
     shield: lily58_right
+    cmake-args: -DCONFIG_ZMK_SPLIT=y -DCONFIG_ZMK_SPLIT_ROLE_CENTRAL=n
