--- a/boards/shields/dongle_display/dongle_display.conf
+++ b/boards/shields/dongle_display/dongle_display.conf
@@ -1,19 +1,19 @@
-CONFIG_ZMK_DISPLAY=y
-CONFIG_BT_BAS=n
-CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_FETCHING=y
-# 电池电量报告间隔时间单位是秒
+CONFIG_ZMK_DISPLAY=y # 디스플레이(OLED) 활성화
+CONFIG_BT_BAS=n # 블루투스 배터리 서비스 비활성화
+CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_FETCHING=y # 분할 키보드에서 중앙(마스터)이 배터리 레벨 가져오기 활성화
+# 배터리 전력 보고 간격 (초 단위)
 CONFIG_ZMK_BATTERY_REPORT_INTERVAL=60
-# 不活动 15 分钟后进入深度睡眠,深度睡眠纯在屏幕无法唤醒问题,是zmk固件本身问题已经在解决了
+# 15분 동안 비활성 상태 후 딥 슬립 모드 진입. 딥 슬립에서는 화면이 깨어나지 않는 문제가 있으나 ZMK 펌웨어에서 해결 중
 CONFIG_ZMK_SLEEP=y
-# 1800000 毫秒 = 30 分钟 * 60 秒 * 1000
+# 1800000 밀리초 = 30분 * 60초 * 1000
 CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=3600000
-# 进入空闲状态前的不活动毫秒数
+# 유휴 상태로 진입하기 전 비활동 밀리초 수
 CONFIG_ZMK_IDLE_TIMEOUT=60000
-# 增加键盘消抖
+# 키보드 디바운스 증가
 CONFIG_ZMK_KSCAN_DEBOUNCE_PRESS_MS=5
 CONFIG_ZMK_KSCAN_DEBOUNCE_RELEASE_MS=5
-# 增加键盘的 BLE 无线电的发射功率，用解决延迟和左右通讯不佳的问题
+# 키보드의 BLE 무선 전송 전력을 증가시켜 지연 및 좌우 통신 불량 문제를 해결합니다
 CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
-# 更改键盘默认显示名称
-CONFIG_ZMK_KEYBOARD_NAME="Cygnus"
+# 키보드 기본 표시 이름 변경
+CONFIG_ZMK_KEYBOARD_NAME="Lily58"
 CONFIG_ZMK_MOUSE=y
