--- a/build.yaml
+++ b/build.yaml
@@ -29,7 +29,7 @@ include:
   #   shield: settings_reset
 
   - board: nice_nano_v2
-    shield: lily58_dongle
+    shield: lily58_dongle lily58_dongle_display
 
   - board: nice_nano_v2
     shield: settings_reset
