--- a/build.yaml
+++ b/build.yaml
@@ -34,10 +34,10 @@ include:
   - board: nice_nano_v2
     shield: settings_reset
 
-  - board: seeeduino_xiao_ble
-    shield: AdeptBLE
-  - board: seeeduino_xiao_ble
-    shield: settings_reset
+  # - board: seeeduino_xiao_ble
+  #   shield: AdeptBLE
+  # - board: seeeduino_xiao_ble
+  #   shield: settings_reset
 
   # Add these cmake-args to the peripherals you wish to use with the dongle
   - board: nice_nano_v2
