--- a/build.yaml
+++ b/build.yaml
@@ -34,15 +34,16 @@ include:
   - board: nice_nano_v2
     shield: settings_reset
 
-  - board: seeeduino_xiao_ble
-    shield: AdeptBLE
-  - board: seeeduino_xiao_ble
-    shield: settings_reset
+  # - board: seeeduino_xiao_ble
+  #   shield: AdeptBLE
+  # - board: seeeduino_xiao_ble
+  #   shield: settings_reset
 
   # Add these cmake-args to the peripherals you wish to use with the dongle
-  # - board: nice_nano_v2
-  #   shield: lily58_left
-  #   cmake-args: -DCONFIG_ZMK_SPLIT=y -DCONFIG_ZMK_SPLIT_ROLE_CENTRAL=n
-  # - board: nice_nano_v2
-  #   shield: lily58_right
-  #   cmake-args: -DCONFIG_ZMK_SPLIT=y -DCONFIG_ZMK_SPLIT_ROLE_CENTRAL=n
+  - board: nice_nano_v2
+    shield: lily58_left
+    cmake-args: -DCONFIG_ZMK_SPLIT=y -DCONFIG_ZMK_SPLIT_ROLE_CENTRAL=n
+  - board: nice_nano_v2
+    shield: lily58_right
+    cmake-args: -DCONFIG_ZMK_SPLIT=y -DCONFIG_ZMK_SPLIT_ROLE_CENTRAL=n
+ 
